[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/ui.tres" type="Theme" id=1]
[ext_resource path="res://UI/PalletteButton.gd" type="Script" id=2]

[node name="Button" type="Button"]
margin_right = 186.0
margin_bottom = 180.0
rect_min_size = Vector2( 60, 150 )
theme = ExtResource( 1 )
toggle_mode = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
